<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">vote_client</string>
    <string name="sign_up">Register</string>
    <string name="campaign_insight">Campaign Insight</string>
    <string name="cancel">Regret</string>
    <string name="forget_password">Forget Password</string>
    <string name="new_anchor">New Anchor</string>
    <string name="lbl_username">Login Name</string>
    <string name="lbl_enter_username">User Name</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_enter_password">Password</string>
    <string name="lbl_terms">Terms and Conditions</string>
    <string name="agree">I agree</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_enter_email">email</string>
    <string name="lbl_credit">Credit</string>
    <string name="lbl_enter_credit"></string>
    <string name="lbl_credite">Expiry</string>
    <string name="lbl_enter_credite"></string>
    <string name="lbl_cvv">CVV</string>
    <string name="lbl_enter_cvv"></string>
    <string name="country">Country</string>
    <string name="insight">Insight</string>
    <string name="profile">Customer Profile</string>
    <string name="profile_name1">Enter Your Name</string>
    <string name="password_name">Enter Password</string>
    <string name="password_name2">Enter Again</string>
    <string name="country_tag">Country</string>
    <string name="website">Website URL</string>
    <string name="edit_website">Enter Url</string>
    <string name="detail">Details</string>
    <string name="profile_done">Done</string>
    <string name="profile_back">Back</string>
    <string name="forget_login">Login Name</string>
    <string name="forget_email">Enter Email</string>
    <string name="regret_feedback">Enter Your FeedBack</string>
    <string name="newanchor_edit">Enter Name</string>
    <string name="rewards_edit">Enter Values</string>
    <string name="new_campaign">New Campaign</string>
    <string name="new_reward">New Reward</string>

</resources>