<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/parent_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/uname_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_username" />

            <EditText
                android:id="@+id/signup_username"
                android:layout_width="326dp"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_enter_username" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="10px"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="56dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mbl_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/uname_block"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_password" />

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="Password" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="10px"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="56dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mbl_block"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/rpassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="ReEnterPassword" />

            <EditText
                android:id="@+id/signUpPwd"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="Password" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="10px"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="56dp" />
        </LinearLayout>
          <LinearLayout
            android:id="@+id/website_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mbl_block"
            android:orientation="horizontal" >
        
         <TextView
            android:id="@+id/textView2"
            android:layout_width="80dp"
            android:layout_height="34dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/mobile"
            android:layout_toLeftOf="@+id/mobileText"
            android:gravity="center"
            android:text="Website Url" />

       <EditText 
           android:id="@+id/edit"
           android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:text="Website Url"/>
         </LinearLayout>
          <LinearLayout
        android:id="@+id/client_block"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
  
        android:weightSum="1" >

        <TextView
            android:id="@+id/userName"
            android:layout_width="80dp"
            android:layout_height="34dp"
           
            android:text="ClientName" />
        
        <TextView
                android:id="@+id/userNameText"
                android:layout_width="fill_parent"
                android:layout_height="34dp"
             
                android:gravity="center"
                android:text="EnterClientName"/>
        </LinearLayout>
          <LinearLayout
            android:id="@+id/info_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
          
            android:orientation="horizontal" >
         <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Client Information" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
   
        android:ems="10"
        android:text="Information" >
    </EditText>
      </LinearLayout>
        <LinearLayout
            android:id="@+id/terms_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        <TextView
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_terms" />
 
        <ScrollView
            android:id="@+id/textAreaScroller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" >

            <EditText
                android:id="@+id/textView1"
                android:layout_width="319dp"
                android:layout_height="61dp" >

            </EditText>
        </ScrollView>
         </LinearLayout>
        <CheckBox
        android:id="@+id/chkIos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree" />
         <LinearLayout
            android:id="@+id/email_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_email" />

            <EditText
                android:id="@+id/fld_email"
                android:layout_width="326dp"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_enter_email" />

        </LinearLayout>
            <LinearLayout
            android:id="@+id/credit_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_credit" />

            <EditText
                android:id="@+id/credit_card"
                android:layout_width="326dp"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_enter_credit" />

        </LinearLayout>
          <LinearLayout
            android:id="@+id/expiry_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/credite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_credite" />

            <EditText
                android:id="@+id/credit_carde"
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_enter_credite" />
            <TextView
                android:id="@+id/cvv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_cvv" />

            <EditText
                android:id="@+id/credit_cvv"
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_enter_cvv" />

        </LinearLayout>
          <LinearLayout android:id="@+id/age_block"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                   
                      android:orientation="horizontal">
          <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Verification"
            android:id="@+id/submit"
            android:onClick="register"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="58dp" android:layout_toStartOf="@+id/cancel"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:id="@+id/cancel"
            android:onClick="regret"
            android:layout_marginRight="26dp" android:layout_alignTop="@+id/submit"
            android:layout_alignEnd="@+id/parent_linear_layout" android:layout_marginEnd="44dp"/>

         </LinearLayout> 
        

    </LinearLayout>

</ScrollView>